# PR2_Platform

pr2_analysis/robot_data/: manipulation_path_analysis.m  navigation_path_analysis.m
pr2_analysis/robot_data/input/: scenario_1_ref_path.xlsx  scenario_2_ref_path.xlsx
pr2_analysis/robot_data/input/manipulation/: readme.txt
pr2_analysis/robot_data/input/navigation/: readme.txt
pr2_analysis/user_data/: SpectralArcLength.m  manipulation_path_analysis.m  navigation_path_analysis.m
pr2_analysis/user_data/input/manipulation/: readme.txt
pr2_analysis/user_data/input/navigation/: readme.txt
pr2_analysis/user_data/output/: readme.txt
pr2_robot/pr2_description/robots/: pr2.urdf.xacro
pr2_robot/pr2_description/urdf/base_v0/: base.urdf.xacro
pr2_robot/pr2_description/urdf/sensors/: hokuyo_lx30_laser.gazebo.xacro  hokuyo_lx30_laser.gazebo.xacro~
pr2_robot/pr2_description/urdf/tilting_laser_v0/: tilting_laser.urdf.xacro
pr2_robot/pr2_gazebo/config/: dualstereo_camera.launch
pr2_robot/pr2_gazebo/launch/: pr2.launch  pr2_bringup.launch  pr2_empty_world.launch  pr2_no_arms.launch  pr2_no_controllers.launch  pr2_sim_manipulation_scenario01.launch  pr2_sim_manipulation_scenario01.launch~  pr2_sim_manipulation_scenario02.launch  pr2_sim_manipulation_scenario02.launch~  pr2_sim_manipulation_scenario03.launch  pr2_sim_manipulation_scenario03.launch~  pr2_sim_navigation_scenario01.launch  pr2_sim_navigation_scenario01.launch~  pr2_sim_navigation_scenario02.launch  pr2_sim_navigation_scenario02.launch~  pr2_sim_navigation_scenario03.launch  pr2_sim_navigation_scenario03.launch~  pr2_sim_world.launch  pr2_sim_world.launch~  pr2_table_object.launch  pr2_table_simple_shapes.launch  pr2_table_simple_shapes.launch~  pr2_wg_world.launch  pr2_wg_world.launch~
pr2_robot/pr2_gazebo/urdf/: camera_top.xacro~  cube_yellow.urdf  custom_camera_top.xacro  custom_camera_top.xacro~  custom_cylinder.urdf  custom_cylinder.urdf~  custom_location.urdf~  custom_rectangular.urdf  custom_rectangular.urdf~  cylinder_green.urdf  rectangular_red.urdf  rectangular_yellow.urdf  top_camera.gazebo~  top_camera.xacro~
pr2_robot/pr2_gazebo/worlds/: sim_manipulation_scenario01.world  sim_manipulation_scenario01.world~  sim_manipulation_scenario02.world  sim_manipulation_scenario02.world~  sim_manipulation_scenario03.world  sim_manipulation_scenario03.world~  sim_navigation_scenario01.world  sim_navigation_scenario01.world~  sim_navigation_scenario02.world  sim_navigation_scenario02.world~  sim_navigation_scenario03.world  sim_navigation_scenario03.world~  sim_world.world  sim_world.world~
pr2_robot/pr2_moveit_config/launch/: demo.launch  demo.launch~
pr2_robot/pr2_teleop/launch/: jtteleop.launch~
pr2_robot/teleop_arms/: CMakeLists.txt  CMakeLists.txt~  manifest.xml  teleop_pr2_arms_keyboard
pr2_robot/teleop_arms/launch/: jtteleop (original).launch  jtteleop.launch  jtteleop.launch~
pr2_robot/teleop_arms/src/: teleop_pr2_arms_keyboard.cpp
pr2_transceiver/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pr2_transceiver/launch/: pr2_manipulation_hri.launch  pr2_manipulation_hri.launch~  pr2_navigation_hri.launch  pr2_navigation_hri.launch~  usb_camera.launch
pr2_transceiver/src/: camera_transceiver.cpp  camera_transceiver.cpp~  manipulation_transceiver.cpp  manipulation_transceiver.cpp~  navigation_transceiver.cpp  navigation_transceiver.cpp~  param_sender.cpp  point_head.cpp  rosbag_extractor.cpp  teleop_transceiver.cpp  teleop_transceiver.cpp~  transceiver.cpp~  udp_command.cpp~
